testes unitarios ajustados